[gd_scene load_steps=5 format=3 uid="uid://c2mn3n1ys1iwk"]

[ext_resource type="Script" path="res://scripts/RhythmPattern.gd" id="1_2b17y"]
[ext_resource type="Script" path="res://scenes/rhythm_character.gd" id="1_4spp1"]
[ext_resource type="Script" path="res://scripts/RhythmPatternPlayer.gd" id="2_g3g50"]
[ext_resource type="Script" path="res://scenes/RhythmEventHandler.gd" id="3_u787t"]

[node name="RhythmCharacter" type="Node2D"]
script = ExtResource("1_4spp1")

[node name="RhythmPattern" type="Node" parent="."]
script = ExtResource("1_2b17y")
pattern_name = "test"
leading_beats = 1.0
event_times = Array[float]([0.0, 0.5, 1.0, 0.5])

[node name="RhythmPatternPlayer" type="Node" parent="." node_paths=PackedStringArray("patterns")]
script = ExtResource("2_g3g50")
patterns = [NodePath("../RhythmPattern")]

[node name="RhythmEventHandler" type="Node" parent="."]
script = ExtResource("3_u787t")

[connection signal="next_pattern_event" from="RhythmPatternPlayer" to="RhythmEventHandler" method="_on_rhythm_pattern_player_next_pattern_event"]
